test/parser/missing_semi.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
fn main(): unit {
    1.0
// CHECK: [[# @LINE + 1 ]]:1: error: expected ';' at the end of expression
}
